--- a/.github/workflows/kani.yml
+++ b/.github/workflows/kani.yml
@@ -7,6 +7,8 @@ jobs:
   kani:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Run Kani
         uses: model-checking/kani-github-action@v1
         with:
