--- a/.github/workflows/kani.yml
+++ b/.github/workflows/kani.yml
@@ -6,10 +6,17 @@ on:
 jobs:
   kani:
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        feature-set:
+          - ""
+          - '--features "allow-unsafe"'
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Run Kani
+      - name: Run Kani ${{ matrix.feature-set }}
         uses: model-checking/kani-github-action@v1
         with:
-          args: '--tests'
+          args: '--tests ${{ matrix.feature-set }}'
