Temporarily remove criterion due to half dependency
MSRV for criterion is 1.81 now... unfortunate. Probably should move to builtin
test's bench.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ readme = "README.md"
 allow-unsafe = []
 
 [dev-dependencies]
-criterion = "0.5.1"
+# criterion = "0.5.0"
 proptest = "1.5.0"
 
 [profile.release]
